--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,16 @@
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
   <application
+      android:name=".TwipeApplication"
       android:allowBackup="true"
       android:label="@string/app_name"
       android:icon="@drawable/ic_launcher"
-      android:theme="@style/AppTheme">
+      android:theme="@style/NoActionBarTheme">
 
     <activity
         android:name=".presentation.view.activity.MainActivity"
+        android:configChanges="keyboard|keyboardHidden|orientation"
+        android:launchMode="singleTask"
         android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
