--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,69 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 22
-  buildToolsVersion "22.0.0"
+  compileSdkVersion COMPILE_SDK_VERSION as int
+  buildToolsVersion BUILD_TOOLS_VERSION
 
   defaultConfig {
-    applicationId "com.konifar.twipe"
     minSdkVersion 9
-    targetSdkVersion 22
-    versionCode 1
-    versionName "1.0"
+    targetSdkVersion COMPILE_SDK_VERSION as int
+    versionCode VERSION_CODE as int
+    versionName VERSION_NAME
   }
+
+  def secretFile = file("${rootDir}/secret.gradle")
+  if (secretFile.exists()) {
+    apply from: secretFile.absolutePath
+  }
+
   buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    debug {
+      applicationIdSuffix '.dev'
+      versionNameSuffix '-dev'
     }
+
+    release {
+      if (secretFile.exists()) {
+        signingConfig signingConfigs.release
+      }
+      minifyEnabled true
+      proguardFiles 'proguard-rules.pro'
+    }
+  }
+
+  packagingOptions {
+    exclude 'META-INF/LICENSE.txt'
+    exclude 'META-INF/DEPENDENCIES.txt'
+    exclude 'META-INF/NOTICE.txt'
+    exclude 'META-INF/LICENSE'
+    exclude 'META-INF/DEPENDENCIES'
+    exclude 'META-INF/NOTICE'
+  }
+
+  lintOptions {
+    abortOnError false
+  }
+
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_7
+    targetCompatibility JavaVersion.VERSION_1_7
   }
 }
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile 'com.android.support:support-v4:22.0.0'
   compile 'com.android.support:appcompat-v7:22.0.0'
+
+  compile 'com.jakewharton.timber:timber:2.7.1'
+  compile 'com.jakewharton:butterknife:6.1.0'
+  provided 'com.squareup.dagger:dagger-compiler:1.2.2'
+  compile 'com.squareup.dagger:dagger:1.2.2'
+  compile 'com.squareup.retrofit:retrofit:1.9.0'
+  compile 'com.squareup.okhttp:okhttp:2.3.0'
+  compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
+  compile 'com.squareup.picasso:picasso:2.5.2'
+  compile 'com.google.code.gson:gson:2.3.1'
+
+  compile 'com.makeramen:roundedimageview:2.0.1'
 }
