Add deploy gate upload task

--- a/circle.yml
+++ b/circle.yml
@@ -24,3 +24,8 @@ test:
   override:
     - ./gradlew clean assembleDebug
 
+deployment:
+  master:
+    branch: master
+    commands:
+      - ./deploy.sh
