--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+  repositories {
+    maven { url 'https://maven.fabric.io/public' }
+  }
+
+  dependencies {
+    classpath 'io.fabric.tools:gradle:1.18.0'
+  }
+}
+
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+  maven { url 'https://maven.fabric.io/public' }
+}
 
 android {
   compileSdkVersion COMPILE_SDK_VERSION as int
@@ -52,6 +67,7 @@ android {
 
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
+
   compile 'com.android.support:support-v4:22.0.0'
   compile 'com.android.support:appcompat-v7:22.0.0'
 
@@ -66,4 +82,8 @@ dependencies {
   compile 'com.google.code.gson:gson:2.3.1'
 
   compile 'com.makeramen:roundedimageview:2.0.1'
+
+  compile('com.crashlytics.sdk.android:crashlytics:2.2.3@aar') {
+    transitive = true;
+  }
 }
