--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
       </intent-filter>
     </activity>
 
+    <meta-data
+        android:name="io.fabric.ApiKey"
+        android:value="eef593299f106222b116410ba972260f992134e5"/>
+
   </application>
 
 </manifest>
