--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+apply plugin: 'com.neenbedankt.android-apt'
 
 repositories {
   maven { url 'https://maven.fabric.io/public' }
@@ -73,13 +74,14 @@ dependencies {
 
   compile 'com.jakewharton.timber:timber:2.7.1'
   compile 'com.jakewharton:butterknife:6.1.0'
-  provided 'com.squareup.dagger:dagger-compiler:1.2.2'
-  compile 'com.squareup.dagger:dagger:1.2.2'
+  compile 'com.google.dagger:dagger:2.0'
   compile 'com.squareup.retrofit:retrofit:1.9.0'
   compile 'com.squareup.okhttp:okhttp:2.3.0'
   compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
   compile 'com.squareup.picasso:picasso:2.5.2'
   compile 'com.google.code.gson:gson:2.3.1'
+  compile 'org.glassfish:javax.annotation:10.0-b28'
+  apt 'com.google.dagger:dagger-compiler:2.0'
 
   compile 'com.makeramen:roundedimageview:2.0.1'
 
