--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,8 @@ dependencies {
   compile 'com.squareup.picasso:picasso:2.5.2'
   compile 'com.google.code.gson:gson:2.3.1'
   compile 'org.glassfish:javax.annotation:10.0-b28'
+  compile 'de.greenrobot:eventbus:2.4.0'
+  compile 'org.ocpsoft.prettytime:prettytime:3.2.5.Final'
   apt 'com.google.dagger:dagger-compiler:2.0'
 
   compile 'com.makeramen:roundedimageview:2.0.1'
