Add endless scroll listener.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 repositories {
   maven { url 'https://maven.fabric.io/public' }
+  maven { url 'http://github.com/konifar/EndlessScroll/raw/master/repository' }
 }
 
 android {
@@ -86,6 +87,7 @@ dependencies {
   apt 'com.google.dagger:dagger-compiler:2.0'
 
   compile 'com.makeramen:roundedimageview:2.0.1'
+  compile 'com.konifar:EndlessScroll:0.1.1'
 
   compile('com.crashlytics.sdk.android:crashlytics:2.2.3@aar') {
     transitive = true;
