--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,21 +69,19 @@ android {
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
 
-  compile 'com.android.support:support-v4:22.0.0'
-  compile 'com.android.support:appcompat-v7:22.0.0'
+  compile 'com.android.support:design:22.2.0'
+  compile 'com.android.support:appcompat-v7:22.2.0'
+  compile 'com.android.support:recyclerview-v7:22.2.0'
 
   compile 'com.jakewharton.timber:timber:2.7.1'
   compile 'com.jakewharton:butterknife:6.1.0'
-  compile 'com.google.dagger:dagger:2.0'
   compile 'com.squareup.retrofit:retrofit:1.9.0'
   compile 'com.squareup.okhttp:okhttp:2.3.0'
   compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
   compile 'com.squareup.picasso:picasso:2.5.2'
   compile 'com.google.code.gson:gson:2.3.1'
-  compile 'org.glassfish:javax.annotation:10.0-b28'
   compile 'de.greenrobot:eventbus:2.4.0'
   compile 'org.ocpsoft.prettytime:prettytime:3.2.5.Final'
-  apt 'com.google.dagger:dagger-compiler:2.0'
 
   compile 'com.makeramen:roundedimageview:2.0.1'
 
