--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:value="eef593299f106222b116410ba972260f992134e5"/>
 
     <activity
-        android:name=".presentation.view.activity.MainActivity"
+        android:name=".view.activity.MainActivity"
         android:configChanges="keyboard|keyboardHidden|orientation"
         android:launchMode="singleTask"
         android:label="@string/app_name">
@@ -27,13 +27,13 @@
     </activity>
 
     <activity
-        android:name=".presentation.view.activity.LoginActivity"
+        android:name=".view.activity.LoginActivity"
         android:configChanges="keyboard|keyboardHidden|orientation"
         android:launchMode="singleTask"
         android:label="@string/app_name"/>
 
     <activity
-        android:name=".presentation.view.activity.TweetListActivity"
+        android:name=".view.activity.TweetListActivity"
         android:configChanges="keyboard|keyboardHidden|orientation"
         android:label="@string/app_name"/>
 
