--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,12 +78,10 @@ dependencies {
   compile 'com.squareup.retrofit:retrofit:1.9.0'
   compile 'com.squareup.okhttp:okhttp:2.3.0'
   compile 'com.squareup.okhttp:okhttp-urlconnection:2.3.0'
-  compile 'com.squareup.picasso:picasso:2.5.2'
+  compile 'com.facebook.fresco:fresco:0.5.2'
   compile 'com.google.code.gson:gson:2.3.1'
   compile 'de.greenrobot:eventbus:2.4.0'
   compile 'org.ocpsoft.prettytime:prettytime:3.2.5.Final'
-
-  compile 'com.makeramen:roundedimageview:2.0.1'
 
   compile('com.crashlytics.sdk.android:crashlytics:2.2.3@aar') {
     transitive = true;
